--- a/.env-nightlies
+++ b/.env-nightlies
@@ -2,4 +2,5 @@ export TELEGRAF_TAG=latest
 export INFLUXDB_TAG=nightly
 export CHRONOGRAF_TAG=nightly
 export KAPACITOR_TAG=latest
+export GRAFANA_TAG=latest
 export TYPE=nightly
