--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ TELEGRAF_TAG=telegraf:latest
 INFLUXDB_TAG=influxdb:latest
 CHRONOGRAF_TAG=chronograf:latest
 KAPACITOR_TAG=kapacitor:latest
-KAPACITOR_TAG=grqfana:latest
+GRAFANA_TAG=grafana:latest
 IFQL_TAG=quay.io/influxdb/ifqld:v0.0.6
