--- a/grafana/config/grafana.ini
+++ b/grafana/config/grafana.ini
@@ -184,6 +184,7 @@ log_queries =
 [dashboards]
 # Number dashboard versions to keep (per dashboard). Default: 20, Minimum: 1
 ;versions_to_keep = 20
+versions_to_keep = 2
 
 #################################### Users ###############################
 [users]
