Adust deployments on grafana

--- a/images/grafana/latest/Dockerfile
+++ b/images/grafana/latest/Dockerfile
@@ -7,6 +7,9 @@ RUN apt-get update
 RUN apt-get install -y vim
 RUN apt-get install -y nano
 
+RUN mkdir /home/grafana
+RUN chown grafana:grafana /home/grafana
+
 USER grafana
 #
 #RUN apt-get install -y openssh-server
