Re-Sync files with current Service Health Portal scripts Adjust log directory

--- a/grafana/opt/aed/shp/conf/logging.ini
+++ b/grafana/opt/aed/shp/conf/logging.ini
@@ -15,7 +15,8 @@ handlers=fileHandler
 class=FileHandler
 level=ERROR
 formatter=simpleFormatter
-args=('/var/log/shp/shp.log', 'a+')
+# args=('/var/log/shp/shp.log', 'a+')
+args=('/opt/aed/shp/log/shp/shp.log', 'a+')
 
 [formatter_simpleFormatter]
 format=%(asctime)s - [%(filename)s:%(lineno)s - %(funcName)s() ] - %(levelname)s - %(message)s
