--- a/.env-latest
+++ b/.env-latest
@@ -2,5 +2,6 @@ export TELEGRAF_TAG=latest
 export INFLUXDB_TAG=latest
 export CHRONOGRAF_TAG=latest
 export KAPACITOR_TAG=latest
+export GRAFANA_TAG=master
 export GRAFANA_TAG=latest
 export TYPE=latest
