--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,7 @@ services:
 
 
   grafana:
-    # Full tag list: https://hub.docker.com/r/library/chronograf/tags/
+    # Full tag list: https://hub.docker.com/r/grafana/grafana/tags?page=1
     build:
       context: ./images/grafana
       dockerfile: ./${TYPE}/Dockerfile
