Commit Ignore venv

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Ignore python environment files
+venv/
 # Include data directories to be saved on git
 # uncomment the following lines to ignore those folders
 # chronograf/data/
