Commit data files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore python environment files
 venv/
+grafana/home/.DS_Store
+.DS_Store
 # Include data directories to be saved on git
 # uncomment the following lines to ignore those folders
 # chronograf/data/
