--- a/grafana/opt/aed/shp/conf/alerting-config.json
+++ b/grafana/opt/aed/shp/conf/alerting-config.json
@@ -9,8 +9,10 @@
   "servicenow_group_validated" : "Global_OCC",
   "servicenow_group_staging" : "Service Health Portal Staging",
   "servicenow_event_class" : "",
-  "http_proxy" : "http://proxy.us-west-2.teo.dev.ascint.sabrecirrus.com:3128",
-  "https_proxy" : "http://proxy.us-west-2.teo.dev.ascint.sabrecirrus.com:3128",
+  "http_proxy_dev_west" : "http://proxy.us-west-2.teo.dev.ascint.sabrecirrus.com:3128",
+  "https_proxy_dev_west" : "http://proxy.us-west-2.teo.dev.ascint.sabrecirrus.com:3128",
+  "http_proxy" : "",
+  "https_proxy": "",
   "base_dir" : "/opt/aed/shp/",
   "data_dir" : "data/",
   "logging_configuration_file" : "/opt/aed/shp//conf/logging.ini",
@@ -19,7 +21,8 @@
   "grafana_host" : "localhost:3000",
   "grafana_user" : "admin",
   "grafana_pass" : "IamApass01",
-  "influxdb_url" : "http://influx-elb.us-west-2.teo.dev.ascint.sabrecirrus.com:8086",
+  "influxdb_url_dev_west" : "http://influx-elb.us-west-2.teo.dev.ascint.sabrecirrus.com:8086",
+  "influxdb_url" : "http://localhost:8086",
   "influxdb_host" : "",
   "influxdb_port" : "",
   "influxdb_db"   : "kpi",
@@ -31,8 +34,10 @@
   "influxdb_alert_policy"   : "days",
   "influxdb_breach_measure"   : "",
   "influxdb_breach_policy"   : "",
-  "kapacitor_url" : "http://chronograf.us-west-2.teo.dev.ascint.sabrecirrus.com:9092/kapacitor",
-  "chronograf_url" : "http://chronograf.us-west-2.teo.dev.ascint.sabrecirrus.com:8888/chronograf",
+  "kapacitor_url_dev_west" : "http://chronograf.us-west-2.teo.dev.ascint.sabrecirrus.com:9092/kapacitor",
+  "chronograf_url_dev_west" : "http://chronograf.us-west-2.teo.dev.ascint.sabrecirrus.com:8888/chronograf",
+  "kapacitor_url" : "http://localhost:9092/kapacitor",
+  "chronograf_url" : "http://localhost:8888/chronograf",
   "service_health_portal_host" : "",
   "aws_s3_bucket" : "s3://s3-dev-us-west-2-shp-data",
   "s3_dynamic_thresholds_dir": "s3-dev-us-west-2-shp-data/dynamic-thresholds",
