Review config files

--- a/.env-latest
+++ b/.env-latest
@@ -4,4 +4,5 @@ export CHRONOGRAF_TAG=latest
 export KAPACITOR_TAG=latest
 export GRAFANA_TAG=latest
 export GRAFANA_TAG=master
+export GRAFANA_TAG=6.6.1
 export TYPE=latest
